# outlookReacher

./: .env.sample  .gitignore  LICENSE  README.md  main.py  pyproject.toml
templates/: base.html  dashboard.html  login.html
templates/partials/: csv_upload.html  email_campaign.html  messages.html  visualization.html
